--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
               <!-- begin logo-->
               <a href="#" title="Back to homepage">
                   <picture>
-                      <source media="(min-width: 1350)"
+                      <source class="img-min"
                           srcset="https://d33wubrfki0l68.cloudfront.net/81fa290218cedc39d32be7b1f1aba58a25829ebe/0a05f/images/logo--full.svg">
                       <img src="https://d33wubrfki0l68.cloudfront.net/3fbf6ef77e5e00aea7a22423087373169b52ae7e/413ff/images/logo/logo.svg"
                           alt="smashing magazine" height="80">
@@ -173,7 +173,7 @@
                         <h2 class="name">Laura Busche</h2>
                         <span class="wrote-unique">wrote</span>
                         <div class="desc">The case for brand systems: Aligning teamsaround A common story</div>
-                        <div class="icon-comment"><i class="fas fa-comment-alt"></i></i><span class="comment"> Leave a
+                        <div class="icon-comment"><i class="fas fa-comment-alt"></i><span class="comment"> Leave a
                                 comment</span></div>
                         <div class="hash-container unique">
                             <span class="business"><b>#</b> Business</span><sup>283</sup>
@@ -240,7 +240,8 @@
             <h2 class="hidden">head</h2>
             <div class="col-four">
                 <section class="four-container">
-                    <div class="cent-head"><head >our friends and supporters</head></div>
+                    <h2 class="hidden">head</h2>
+                    <div class="cent-head"><h3 >our friends and supporters</3></div>
                     <div class="con">
                         <span id="control"><img width="200" src="https://smashing-delivery.herokuapp.com/catch?uri=https://res.cloudinary.com/indysigner/image/upload/v1559313172/ads/shutterstock-logo-with-icons-white.png" alt=""></span><br>
                         <br><div id="old-bold">Out with the old, in with the bold.It's not stock, it's shutterstock.</div>
@@ -252,8 +253,8 @@
             <div class="col-eight">
                 <div class="eight-container">
                     <div class="icon-cont">
-                        <img src="https://d33wubrfki0l68.cloudfront.net/72280e1450d4ecfc45ef96ea00b27b4bf4ef5d06/eb759/images/smashing-cat/cat-smashing-tv-2.svg"
-                        alt="" height="250" width="50%"/>
+                        <img class="h-250-w-50" src="https://d33wubrfki0l68.cloudfront.net/72280e1450d4ecfc45ef96ea00b27b4bf4ef5d06/eb759/images/smashing-cat/cat-smashing-tv-2.svg"
+                        alt=""/>
                         <a class="remove-under" href=""><h1>1420 smashing members</h1></a>
                         <p>A channel where seasoned developers show how they design,build,work and play
                             .Coming up next: UX OPtimizations for keyboard-only and assistive technology
@@ -331,8 +332,8 @@
             <div class="col-eight">
                 <div class="eight-container">
                     <article class="icon-cont">
-                        <img src="https://d33wubrfki0l68.cloudfront.net/72280e1450d4ecfc45ef96ea00b27b4bf4ef5d06/eb759/images/smashing-cat/cat-smashing-tv-2.svg"
-                        alt="" height="250" width="50%"/>
+                        <img class="h-250-w-50" src="https://d33wubrfki0l68.cloudfront.net/72280e1450d4ecfc45ef96ea00b27b4bf4ef5d06/eb759/images/smashing-cat/cat-smashing-tv-2.svg"
+                        alt=""/>
                         <a class="remove-under" href=""><h2>New on smashing tv</h2></a>
                         <p>A channel where seasoned developers show how they design,build,work and play
                             .Coming up next: UX OPtimizations for keyboard-only and assistive technology
@@ -682,10 +683,10 @@
                     <span class="lining-figures">2006-2019</span>
                 </p>
                 <p>Smashing is proudly running on
-                    <a id="same-col" href="https://www.netlify.com/?utm_source=link&utm_medium=parter&utm_campaign=sm-footer">Netlify</a>
+                    <a class="same-col" href="https://www.netlify.com/?utm_source=link&utm_medium=parter&utm_campaign=sm-footer">Netlify</a>
                 </p>
                 <p>Fonts by
-                    <a id="same-col" href="http://latinotype.com/">Latinotype</a>
+                    <a class="same-col1" href="http://latinotype.com/">Latinotype</a>
                 </p>
             </div>
             <ul class="footer-links">
