--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
             <div class="col-four">
                 <section class="four-container">
                     <h2 class="hidden">head</h2>
-                    <div class="cent-head"><h3 >our friends and supporters</3></div>
+                    <div class="cent-head"><h3 >our friends and supporters</h3></div>
                     <div class="con">
                         <span id="control"><img width="200" src="https://smashing-delivery.herokuapp.com/catch?uri=https://res.cloudinary.com/indysigner/image/upload/v1559313172/ads/shutterstock-logo-with-icons-white.png" alt=""></span><br>
                         <br><div id="old-bold">Out with the old, in with the bold.It's not stock, it's shutterstock.</div>
